karnc/tests/fixtures/negative/210_by_underscore_binder/src/demo.karn
context demo

service api from http {
  on GET("/ping") by _: Visitor () -> Effect[HttpResult[String]] {
    Ok("pong")
  }
}
